proper softid